# open-tradervue

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entities.json  mempalace.yaml  pyproject.toml  railway.json  start.sh  stitch-landing-prompt.md  stitch-prompt.md  tradervue.db  vercel.json
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-16T22-07-41-789Z.yml  page-2026-04-16T22-08-37-286Z.yml  page-2026-04-16T22-08-52-726Z.yml  page-2026-04-16T23-10-58-539Z.yml  page-2026-04-16T23-22-04-861Z.yml  page-2026-04-19T13-58-29-193Z.yml  page-2026-04-19T13-59-37-664Z.yml  page-2026-04-19T14-03-01-806Z.yml  page-2026-04-19T14-06-45-162Z.yml  page-2026-04-19T14-07-02-697Z.yml  page-2026-04-19T14-07-29-154Z.yml  page-2026-04-19T14-09-11-057Z.yml  page-2026-04-19T14-34-24-752Z.yml
alembic/: env.py
alembic/versions/: 2f6734d4367e_initial_schema_with_users.py
backend/: __init__.py  auth.py  database.py  main.py  schemas.py
backend/models/: __init__.py  broker_connection.py  journal.py  market_data.py  position.py  subscription.py  trade.py  user.py
backend/routes/: __init__.py  analysis.py  auth.py  broker.py  calendar.py  demo.py  journal.py  market_data.py  scanner.py  stripe.py  trades.py
backend/services/: __init__.py  (+11 more)
frontend/: index.html  package-lock.json  package.json
pinescripts/: ross_indicators.pine  ross_mini_pullback.pine
scripts/: build-dash.sh
tests/: conftest.py  test_analysis.py  test_auth.py  test_market_data_source.py  test_polygon.py  test_trades.py
(+54 files in other folders)
